Fixed: cards scroll overflow

--- a/public/static/css/home.css
+++ b/public/static/css/home.css
@@ -327,7 +327,7 @@
   .posts {
     padding: 0 24px;
     width: calc(100% + 58px);
-    margin: 0 -28px;
+    margin: 0 -30px;
     box-sizing: border-box;
   }
 
