--- a/public/static/css/user.css
+++ b/public/static/css/user.css
@@ -60,7 +60,7 @@
 
     .posts {
       margin-top: 29px;
-      padding-top: 34px;
+      padding-top: 31px;
       display: flex;
       justify-content: space-between;
       flex-wrap: wrap;
